--- a/lab_netconf/lab_netconf.clab.yml
+++ b/lab_netconf/lab_netconf.clab.yml
@@ -1,16 +1,40 @@
 # topology documentation: http://containerlab.dev/lab-examples/two-srls/
 name: lab_netconf
 
+mgmt:
+  network: fixedips
+  ipv4-subnet: 172.100.100.0/24
+  ipv6-subnet: 2001:172:100:100::/80
+
 topology:
   nodes:
     sw1:
-      kind: nokia_srlinux
-      image: ghcr.io/nokia/srlinux
-      startup-config: sw1.cfg
+      kind: ceos
+      image: ceos:4.30.5M
+      mgmt-ipv4: 172.100.100.2
+      mgmt-ipv6: 2001:172:100:100::2
+      startup-config: startup-configs/sw1.cfg
     sw2:
       kind: nokia_srlinux
       image: ghcr.io/nokia/srlinux
-      startup-config: sw2.cfg
-
+      mgmt-ipv4: 172.100.100.3
+      mgmt-ipv6: 2001:172:100:100::3
+      startup-config: startup-configs/sw2.cfg
+    lab-mgmt:
+      kind: linux
+      image: lab-mgmt
+      mgmt-ipv4: 172.100.100.5
+      mgmt-ipv6: 2001:172:100:100::5
+      binds:
+        - ansible:/workdir
+        - clab-lab_netconf/ansible-inventory.yml:/etc/ansible/hosts
+      entrypoint: tail -f /dev/null
+      #exec:
+      # - ip address add 192.168.1.5/24 dev eth1
+    #br-clab:
+    # kind: bridge
   links:
-    - endpoints: ["sw1:e1-1", "sw2:e1-1"]
+#    - endpoints: ["lab-mgmt:eth1", "br-clab:eth1"]
+#    - endpoints: ["sw1:eth1", "br-clab:eth2"]
+#    - endpoints: ["sw2:e1-1", "br-clab:eth3"]
+    - endpoints: ["sw1:eth1", "sw2:e1-1"]
